# Depth-Estimator-with-Skeleton

./: .gitignore  README.md  pyproject.toml
.github/workflows/: PR_check_with_linting_test.yml
docs/: conf.py  index.rst  src.camera_objects.rst  src.camera_objects.single_camera.rst  src.camera_objects.two_cameras.rst  src.model.rst  src.opencv_objects.rst  src.rst  src.ui_objects.rst  src.utils.rst
src/: main.py  main_test_window.py
src/camera_config/: GH3_camera_config.yaml  ORYX_camera_config.yaml
src/camera_objects/: __init__.py
src/camera_objects/single_camera/: __init__.py  flir_camera_system.py  single_camera_system.py
src/camera_objects/two_cameras/: __init__.py  dual_flir_system.py  dual_realsense_system.py  realsense_camera_system.py  two_cameras_system.py
src/model/: __init__.py  detector.py  keypoint_info.py  one_euro_filter.py  point_processing_utils.py  pose_estimator.py  skeleton_drawing_utils.py  skeleton_visualizer.py  skeleton_visualizer_matplotlib.py  timer.py  tracker.py
src/model/configs/: ViTPose_base_simple_halpe_256x192.py
src/model/configs/_base_/: default_runtime.py  det_p5_tta.py
src/model/configs/_base_/pose/: coco.py
src/model/configs/yolox/: yolox_p5_tta.py  yolox_s_fast_8xb8-300e_coco.py  yolox_tiny_fast_8xb8-300e_coco.py
src/opencv_objects/: __init__.py  aruco_detector.py  chessboard_calibration.py  epipolar_line_detector.py
src/ui_objects/: __init__.py  abstract_tab.py  basic_setting_tab.py  calibration_tab.py  opencv_ui_controller.py  qt_mainwindow.py  two_cameras_system_thread.py
src/utils/: __init__.py  display_utils.py  file_utils.py
tests/: test_aruco_detector.py  test_chessboard_calibration.py  test_display_utils.py  test_dual_realsense_system.py  test_epipolar_line_detector.py  test_file_utils.py  test_realsense_camera_system.py
