[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "./src"
[tool.coverage.run]
omit = [
    "config.py",
    "config-3.py",
    ]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[project]
requires-python = ">=3.8,<3.9"
name = "Depth-Estimator-with-Skeleton"
version = "0.0.0"
description = """
TODO
"""

dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.7.0.72",
    "loguru",
    "scikit-image",
    "scikit-learn",
    "tqdm",
    "Pillow",
    "thop",
    "ninja",
    "tabulate",
    "motmetrics",
    "filterpy",
    "h5py",
    "matplotlib",
    "scipy",
    "prettytable",
    "easydict",
    "tensorboard",
    "pyyaml",
    "yacs",
    "termcolor",
    "gdown",
    "pyqtgraph",
    "pyqt5",
    "shapely",
    "onnx",
    "onnxruntime==1.8.0",
    "onnx-simplifier==0.3.5",
    "timm",
    "absl-py==1.4.0",
    "addict==2.4.0",
    "blessed==1.20.0",
    "bytecode==0.15.1",
    "cachetools==5.3.1",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "contourpy==1.1.0",
    "cycler==0.11.0",
    "Cython==0.29.35",
    "debugpy==1.6.7",
    "einops==0.6.1",
    "filelock==3.12.2",
    "fonttools==4.40.0",
    "fsspec==2023.6.0",
    "future==0.18.3",
    "google-auth==2.21.0",
    "google-auth-oauthlib==1.0.0",
    "gpustat==1.1",
    "grpcio==1.56.0",
    "huggingface-hub==0.15.1",
    "idna==3.4",
    "importlib-metadata==6.7.0",
    "importlib-resources==5.12.0",
    "json-tricks==3.17.1",
    "kiwisolver==1.4.4",
    "Markdown==3.4.3",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "mdurl==0.1.2",
    "mkl-fft==1.3.0",
    "mkl-service==2.4.0",
    "model-index==0.1.11",
    "munkres==1.1.4",
    "nvidia-ml-py==11.525.112",
    "oauthlib==3.2.2",
    "open3d==0.19.0",
    "openmim==0.3.7",
    "ordered-set==4.1.0",
    "packaging==23.1",
    "pandas==2.0.2",
    "platformdirs==3.8.0",
    "polars==1.8.2",
    "protobuf==4.23.3",
    "psutil==5.9.5",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycocotools==2.0.6",
    "Pygments==2.15.1",
    "pyparsing==3.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rich==13.4.2",
    "rsa==4.9",
    "safetensors==0.3.1",
    "sheen==0.1.2",
    "six==1.16.0",
    "tensorboard-data-server==0.7.1",
    "tensorboardX==2.6.1",
    "tomli==2.0.1",
    "tzdata==2023.3",
    "urllib3==1.26.16",
    "visualizer==0.0.1",
    "wcwidth==0.2.6",
    "Werkzeug==3.0.6",
    "xmltodict==0.13.0",
    "xtcocotools==1.13",
    "yapf==0.40.1",
    "zipp==3.15.0",
    "PyYAML==6.0.2",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "PyQt5_sip==12.15.0"
]
# require install PySpin with pip install spinnaker_python-4.0.0.116-cp38-cp38-win_amd64.whl
# link to wheel file can be found in README

[project.optional-dependencies]
test = [
    "pylint==3.2.7",
    "coverage==7.6.1"
]